fix(i18n): add missing pppoe customer field

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -1811,6 +1811,7 @@
         },
         "fields": {
           "router": "Router",
+          "customer": "Customer",
           "location": "Location",
           "username": "Username",
           "password": "Password",
