--- a/src/lib/i18n/locales/id.json
+++ b/src/lib/i18n/locales/id.json
@@ -1789,6 +1789,7 @@
         },
         "fields": {
           "router": "Router",
+          "customer": "Pelanggan",
           "location": "Lokasi",
           "username": "Username",
           "password": "Password",
