perf(logs): server paging + optional total

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -107,6 +107,7 @@
     "open": "Open",
     "download": "Download",
     "load_more": "Load more",
+    "end": "End",
     "page": "Page",
     "results": "results",
     "search": "Search",
