--- a/src/lib/i18n/locales/id.json
+++ b/src/lib/i18n/locales/id.json
@@ -107,6 +107,7 @@
     "open": "Buka",
     "download": "Unduh",
     "load_more": "Muat lagi",
+    "end": "Akhir",
     "page": "Halaman",
     "results": "hasil",
     "search": "Cari",
